# brzozowski

./: README.md  construct_dfa.py  deriv.py  match.py  test.py
brzozowski/: Cargo.toml
brzozowski/benches/: augment.rs  is_match.rs
brzozowski/src/: expr.rs  lib.rs
rust/: Cargo.toml
rust/src/: expr.rs  lib.rs
