[package]
name = "brzozowski"
version = "0.1.0"
edition = "2021"
authors = ["Aalekh Patel <aalekh.gwpeck.7998@icloud.com"]
readme = "../README.md"

[dependencies]
lazy_static = "1.4.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8.5"
regex = "1.10.4"
test-case = { version = "3.3.1", features = ["regex", "with-regex"] }

[[bench]]
name = "augment"
harness = false

[[bench]]
name = "is_match"
harness = false
